fixed central buttons alignments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,12 +161,20 @@ main {
 }
 .central-buttons {
   text-align: center;
-  margin-top: 30px;
-  >a {
-    width: 160px;
-    margin: 0px 50px;
-  }
+  margin-top: 25px;
+  margin-bottom: 15px;
 }
+.central-buttons a {
+  width: 160px;
+  margin: 10px 10px 0px 10px;
+  background-color: #C7585B;
+  color: #FFFFFF;
+  border-radius: 4px;
+  padding: 5px 11px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
 .platform-header-nav .navbar-right {
   margin: 0px 10px 0px 0px;
   padding-top: 20px;
